name:                haskell
version:             0.1.0.0
synopsis:            Algorithms implementations, algorithmic problems solutions and other experiments
homepage:            gitlab.com/raindev/graveyard
license:             BSD2
author:              Andrew Barchuk
maintainer:          andrew@raindev.io
build-type:          Simple
cabal-version:       >=1.24

library
  exposed-modules:     Algo.Binsearch
  build-depends:       base >=4.9,
                       vector ==0.12.*
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Algo/BinsearchSpec.hs
  build-depends:       base >=4.9,
                       haskell,
                       hspec ==2.*,
                       vector ==0.12.*
  default-language:    Haskell2010
